# AI_Virtual_Try_Application

./: .gitignore  ARCHITECTURE.md  DATA_FLOW.md  FAILURE_MODES.md  FEATURES_IMPLEMENTED.md  INVESTOR_PITCH_DOCUMENT.md  OWNERSHIP.md  README.md  TESTING.md  logger.ts
backend/: .gitignore  README.md  api.py  config.py  cost_logger.py  database.py  database_retrieval.py  db_agent.py  fashion_stylist.py  free_trial_agent.py  free_trial_usage.json  gamified_unlock.py  gamified_unlocks.json  main.py  monitoring_report.py  profile_builder.py  pyproject.toml  questions.py  recommendation_agent.py  recommendation_logs.json  run.py  seed_db.py  test_cost_monitor.py  test_usage_monitor.py  text_to_json.py
backend/app/agents/: __init__.py  free_trial_agent.py  gamified_unlock.py
backend/app/agents/orchestration/: __init__.py  db_agent.py  recommendation_agent.py
backend/app/api/: __init__.py  app.py  error_handlers.py
backend/app/core/: config.py  errors.py  exceptions.py
backend/app/db/: database.py  manager.py  retrieval.py
backend/app/llm/: groq_client.py
backend/app/logging/: __init__.py  logger.py  structured_logger.py
backend/app/monitoring/: __init__.py  cost_logger.py  cost_monitor.py  recommendation_logger.py  token_monitor.py  usage_monitor.py
backend/app/prompts/: templates.py
backend/app/recommendations/: engine.py  profile_builder.py  recommendation_engine.py
backend/app/schemas/: requests.py  responses.py
backend/app/tools/: __init__.py  seed_db.py
backend/app/utils/: text.py
backend/tests/: test_database_manager.py  test_request_schema.py
(+82 files in other folders)
